<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Encounter Runner</string>
	<string name="main_title">Encounter Runner</string>
    <string name="party_title">Party View</string>
    <string name="character_title">Character</string>
    <string name="table_title">Table</string>
    <string name="login_title">Login</string>
    <string name="scoreboard_title">Scoreboard</string>
    <string name="options_title">Options</string>
    <string name="about_title">About</string>
    <string name="encID_title">Encounter ID:</string>
    <string name="encID_hint">ID</string>
    <string name="about_text">This is the Android front end to the Dungeons and Dragons encrunner.</string>
    <string name="refresh_title">Refresh (ms)</string>
    <string name="refresh_summary">Interval between refreshing Character and Table view. Set to 0 to disable auto-refresh.</string>
    <string name="url_title">URL</string>
    <string name="url_summary">Encrunner URL.</string>
    <string name="charselect_title">Character Select</string>
    <string name="character_enchp_label">ENC HP</string>
    <string name="character_plus_title">+</string>
    <string name="character_minus_title">-</string>
    <string name="character_change_label">CHANGE</string>
    <string name="character_hp_label"><u>HP</u></string>
    <string name="character_ac_label"><u>AC</u></string>
    <string name="character_insight_label"><u>Passive Insight</u></string>
    <string name="character_speed_label"><u>Speed</u></string>
    <string name="character_fort_label"><u>Fort</u></string>
    <string name="character_perception_label"><u>Passive Percep</u></string>
    <string name="character_init_label"><u>Init</u></string>
    <string name="character_reflex_label"><u>Reflex</u></string>
    <string name="character_will_label"><u>Will</u></string>
    <string name="character_markers_label"><u>Markers</u></string>
    <string name="username_title">Username</string>
    <string name="password_title">Password</string>
    <string name="loginbutton_title">Login</string>
</resources>
