<?xml version="1.0" encoding="utf-8"?>
<TableLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:padding="10dip" >
	<TableRow>
		<TextView
			android:id="@+id/character_name"
			android:textSize="24.5sp"/>
	</TableRow>
	<TableRow>
		<TextView
			android:text="@string/character_enchp_label"
			android:layout_weight="1"/>
		<TextView android:layout_weight="1"/>
		<TextView android:layout_weight="1"/>
		<TextView
			android:text="@string/character_change_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_weight="1"/>
	</TableRow>
	<TableRow>
		<TextView
			android:id="@+id/character_enchp"
			android:layout_weight="1" />
		<Button
			android:id="@+id/character_plus_button"
			android:text="@string/character_plus_title"
			android:layout_width="40dip"
			android:layout_weight="1"/>"
		<Button
			android:id="@+id/character_minus_button"
			android:text="@string/character_minus_title"
			android:layout_width="40dip"
			android:layout_weight="1"/>
		<EditText
			android:id="@+id/character_change"
			android:numeric="integer"
			android:layout_weight="1" />
	</TableRow>
	<TableRow>
		<TextView
			android:text="@string/character_hp_label"
			android:layout_weight="1" />
		<TextView
			android:text="@string/character_ac_label"
			android:layout_weight="1" />
		<TextView
			android:text="@string/character_insight_label"
			android:layout_weight="1" />
	</TableRow>
	<TableRow>
		<TextView
			android:id="@+id/character_hp"
			android:layout_weight="1" />
		<TextView
			android:id="@+id/character_ac"
			android:layout_weight="1" />
		<TextView
			android:id="@+id/character_insight"
			android:layout_weight="1" />
	</TableRow>
	<TableRow>
		<TextView
			android:text="@string/character_speed_label"
			android:layout_weight="1" />
		<TextView
			android:text="@string/character_fort_label"
			android:layout_weight="1" />
		<TextView
			android:text="@string/character_perception_label"
			android:layout_weight="1" />
	</TableRow>
	<TableRow>
		<TextView
			android:id="@+id/character_speed"
			android:layout_weight="1" />
		<TextView
			android:id="@+id/character_fort"
			android:layout_weight="1" />
		<TextView
			android:id="@+id/character_perception"
			android:layout_weight="1" />
	</TableRow>
	<TableRow>
		<TextView
			android:text="@string/character_init_label"
			android:layout_weight="1" />
		<TextView
			android:text="@string/character_reflex_label"
			android:layout_weight="1" />
		<TextView
			android:layout_weight="1" />
	</TableRow>
	<TableRow>
		<TextView
			android:id="@+id/character_init"
			android:layout_weight="1" />
		<TextView
			android:id="@+id/character_reflex"
			android:layout_weight="1" />
		<TextView
			android:layout_weight="1" />
	</TableRow>
	<TableRow>
		<TextView
			android:layout_weight="1" />
		<TextView
			android:text="@string/character_will_label"
			android:layout_weight="1" />
		<TextView
			android:layout_weight="1" />
	</TableRow>
	<TableRow>
		<TextView
			android:layout_weight="1" />
		<TextView
			android:id="@+id/character_will"
			android:layout_weight="1" />
		<TextView
			android:layout_weight="1" />
	</TableRow>
	<TableRow>
		<TextView
			android:text="@string/character_markers_label"
			android:layout_weight="1" 
			android:layout_span="4" />
	</TableRow>
	<TableRow>
		<ListView
			android:id="@android:id/list"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:layout_span="4" />
	</TableRow>
</TableLayout>