<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="30dip">
    <LinearLayout
    	android:orientation="vertical"
    	android:layout_height="wrap_content"
    	android:layout_width="fill_parent"
    	android:layout_gravity="center">
   		<TextView
			android:text="@string/main_title"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_gravity="center"
			android:layout_marginBottom="25dip"
			android:textSize="24.5sp" />
    	<LinearLayout
    		android:orientation="horizontal"
    		android:layout_height="wrap_content"
    		android:layout_width="fill_parent">
    		<TextView
    			android:text="@string/encID_title"
    			android:layout_width="wrap_content"
    			android:layout_height="wrap_content"/>
    		<EditText
    			android:id="@+id/encID_text"
    			android:numeric="integer"
				android:hint="@string/encID_hint"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
		</LinearLayout>
		<Button
			android:id="@+id/party_button"
			android:text="@string/party_title"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"/>
		<Button
			android:id="@+id/character_button"
			android:text="@string/character_title"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"/>
		<Button
			android:id="@+id/table_button"
			android:text="@string/table_title"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"/>
		<Button
			android:id="@+id/scoreboard_button"
			android:text="@string/scoreboard_title"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"/>
		<Button
			android:id="@+id/options_button"
			android:text="@string/options_title"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"/>
		<Button
			android:id="@+id/about_button"
			android:text="@string/about_title"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"/>
		<Button
			android:id="@+id/login_button"
			android:text="@string/login_title"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"/>
	</LinearLayout>
</ScrollView>
