<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:padding="10dip" >
   	<LinearLayout
   		android:orientation="horizontal"
   		android:layout_height="wrap_content"
   		android:layout_width="fill_parent">
   		<TextView
   			android:text="@string/username_title"
   			android:layout_width="wrap_content"
   			android:layout_height="wrap_content"/>
   		<EditText
   			android:id="@+id/username_text"
			android:layout_width="80dp"
			android:layout_height="wrap_content"/>
	</LinearLayout>
	<LinearLayout
   		android:orientation="horizontal"
   		android:layout_height="wrap_content"
   		android:layout_width="fill_parent">
   		<TextView
   			android:text="@string/password_title"
   			android:layout_width="wrap_content"
   			android:layout_height="wrap_content"/>
   		<EditText
   			android:id="@+id/password_text"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:password="true"/>
	</LinearLayout>
	<Button
			android:id="@+id/login_button"
			android:text="@string/loginbutton_title"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"/>
</LinearLayout>